Fix layout issue

--- a/themes/nica/assets/style/layout/_layout.scss
+++ b/themes/nica/assets/style/layout/_layout.scss
@@ -12,6 +12,7 @@ html {
 }
 
 body {
+  width: 100%;
   min-height: 100%;
   display: grid;
   grid-template-rows: auto 1fr auto;
